added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="color/color.css">
 </head>
 <body>
-    
+    <div>
+    <h3>Me sending code to Github</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis porro vitae, sequi laboriosam recusandae, beatae ipsa alias soluta nihil deleniti odit nesciunt, assumenda non error corrupti perspiciatis fuga vel officiis!</p>
+    </div>
 </body>
 </html>
