added the second n third blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-    <h3>Me sending code to Github</h3>
+    <h3>Me sending code to Github First</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis porro vitae, sequi laboriosam recusandae, beatae ipsa alias soluta nihil deleniti odit nesciunt, assumenda non error corrupti perspiciatis fuga vel officiis!</p>
+    </div>
+    <div>
+    <h3>Me sending code to Github second</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis porro vitae, sequi laboriosam recusandae, beatae ipsa alias soluta nihil deleniti odit nesciunt, assumenda non error corrupti perspiciatis fuga vel officiis!</p>
+    </div>
+    <div>
+    <h3>Me sending code to Github third</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis porro vitae, sequi laboriosam recusandae, beatae ipsa alias soluta nihil deleniti odit nesciunt, assumenda non error corrupti perspiciatis fuga vel officiis!</p>
     </div>
 </body>
